--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.23.0",
     "axios": "^1.6.0",
-    "dotenv": "^16.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.0"
+    "dotenv": "^16.3.0",
+    "express": "^4.18.0"
   },
   "keywords": ["whatsapp", "bot"],
   "author": "Your Name",
